Add Name Input & Result

--- a/index.html
+++ b/index.html
@@ -7,14 +7,40 @@
     <link rel="icon" type="image/png" href="TicTacToe.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="gbg">
     <div class="msg-container hide">
       <p id="msg">Winner</p>
-      <button class="btn" id="new-btn">New Game</button>
+      <button class="btn" href="#players" id="new-btn">New Game</button>
     </div>
+
+    <h1 class="heading">Tic Tac Toe</h1>
+
+    <form class="players" id="players" action="#">
+      <h2 class="name">Player Names</h2><br /><br />
+      <label for="player1">
+        <input class="gbg"
+          type="text"
+          name="player1"
+          id="player1"
+          placeholder="Enter The Name Of Player 1"
+          required
+        /> </label
+      ><br />
+      <label for="player2">
+        <input
+        class="gbg"
+          type="text"
+          name="player2"
+          id="player2"
+          placeholder="Enter The Name Of Player 2"
+          required
+        /> </label
+      ><br /><br />
+      <button type="submit" onclick="storeName()" id="start-btn" class="btn" />Start The Game</button>
+    </form>
+    
     <main>
-      <h1>Tic Tac Toe</h1>
-      <div class="container">
+      <div class="container hide">
         <div class="game">
           <button class="box"></button>
           <button class="box"></button>
@@ -27,7 +53,7 @@
           <button class="box"></button>
         </div>
       </div>
-      <button class="btn" id="reset-btn">Reset Game</button>
+      <button class="btn hide" id="reset-btn">Reset Game</button>
     </main>
     <script src="script.js"></script>
   </body>
