Fixed Minor Errors

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <h1 class="heading">Tic Tac Toe</h1>
 
     <form class="players" id="players" action="#">
-      <h2 class="name">Player Names</h2><br /><br />
+      <h2 class="name">Player Names</h2>
+      <br /><br />
       <label for="player1">
-        <input class="gbg"
+        <input
           type="text"
           name="player1"
           id="player1"
@@ -28,7 +29,6 @@
       ><br />
       <label for="player2">
         <input
-        class="gbg"
           type="text"
           name="player2"
           id="player2"
@@ -36,9 +36,9 @@
           required
         /> </label
       ><br /><br />
-      <button type="submit" onclick="storeName()" id="start-btn" class="btn" />Start The Game</button>
+      <button type="submit" id="start-btn" class="btn">Start The Game</button>
     </form>
-    
+
     <main>
       <div class="container hide">
         <div class="game">
